--- a/crates/qw-window-glfw/Cargo.toml
+++ b/crates/qw-window-glfw/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2024"
 license = "GPL-2.0-only"
 
 [dependencies]
+glfw = { version = "0.61.0", optional = true }
+
+[features]
+default = []
+glfw = ["dep:glfw"]
