bulk commit, agnostic backend renderer

--- a/crates/qw-renderer-gl/Cargo.toml
+++ b/crates/qw-renderer-gl/Cargo.toml
@@ -6,6 +6,7 @@ license = "GPL-2.0-only"
 
 [dependencies]
 qw-common = { path = "../qw-common" }
+qw-renderer = { path = "../qw-renderer" }
 glow = { version = "0.16.0", optional = true }
 
 [features]
