--- a/crates/qw-client/Cargo.toml
+++ b/crates/qw-client/Cargo.toml
@@ -7,5 +7,10 @@ license = "GPL-2.0-only"
 [dependencies]
 qw-audio = { path = "../qw-audio" }
 qw-common = { path = "../qw-common" }
+qw-renderer = { path = "../qw-renderer" }
 qw-renderer-gl = { path = "../qw-renderer-gl" }
 qw-window-glfw = { path = "../qw-window-glfw" }
+
+[features]
+default = []
+glow = ["qw-renderer-gl/glow", "qw-window-glfw/glfw"]
